--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,9 +7,6 @@ package:
 source:
   url: https://pypi.io/packages/source/t/tomlkit/tomlkit-{{ version }}.tar.gz
   sha256: d7a454f319a7e9bd2e249f239168729327e4dd2d27b17dc68be264ad1ce36754
-  patches:
-    # Causes ClobberWarnings. Remove after https://github.com/sdispater/tomlkit/issues/69
-    - 0001-remove-tests-package.patch
 
 build:
   number: 0
@@ -22,7 +19,7 @@ build:
     # Causes ClobberWarnings. Remove after https://github.com/sdispater/tomlkit/issues/69
     - rd /s /q tests  # [win]
     - rm -rf tests  # [not win]
-    - {{ PYTHON }} -m pip install . --no-deps --ignore-installed -vvv
+    - {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
@@ -34,8 +31,6 @@ requirements:
   run:
     - python
     - typing >=3.6,<4.0  # [py<35]
-    - enum34 >=1.1,<2.0  # [py27]
-    - functools32 >=3.2.3,<4.0.0  # [py27]
 
 test:
   requires:
