--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,27 +10,26 @@ source:
 
 build:
   number: 1
+  noarch: python
   script:
     # Somehow, when pyproject.toml is present, it requires poetry on Windows.
     # However, even with that dependency satisfied, we get:
     # "tomlkit cannot depend on itself"
-    - del pyproject.toml  # [win]
     - rm pyproject.toml  # [not win]
     # Causes ClobberWarnings. Remove after https://github.com/sdispater/tomlkit/issues/69
-    - rd /s /q tests  # [win]
     - rm -rf tests  # [not win]
     - {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
+    - python >=3.6                           # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
   host:
     - pip
-    - python
+    - python >=3.6
   run:
-    - python
-    - typing >=3.6,<4.0  # [py<35]
+    - python >=3.6
+    - typing >=3.6,<4.0
 
 test:
   requires:
