--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,24 +12,19 @@ build:
   number: 0
   noarch: python
   script:
-    # Somehow, when pyproject.toml is present, it requires poetry on Windows.
-    # However, even with that dependency satisfied, we get:
-    # "tomlkit cannot depend on itself"
-    - rm pyproject.toml  # [not win]
-    # Causes ClobberWarnings. Remove after https://github.com/sdispater/tomlkit/issues/69
-    - rm -rf tests  # [not win]
     - {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
-    - python >=3.6                           # [build_platform != target_platform]
+    - python >=3.7                           # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
   host:
     - pip
-    - python >=3.6
+    - poetry-core >=1.0.0a9
+    - python >=3.7
   run:
-    - python >=3.6
-    - typing >=3.6,<4.0
+    - python >=3.7
+    - typing >=3.7,<4.0
 
 test:
   requires:
