--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,18 +1,18 @@
+{% set name = "tomlkit" %}
 {% set version = "0.11.8" %}
 
 package:
-  name: tomlkit
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/t/tomlkit/tomlkit-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/tomlkit-{{ version }}.tar.gz
   sha256: 9330fc7faa1db67b541b28e62018c17d20be733177d290a13b24c62d1614e0c3
 
 build:
-  number: 0
   noarch: python
-  script:
-    - {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv
+  number: 0
 
 requirements:
   build:
@@ -24,7 +24,6 @@ requirements:
     - python >=3.7
   run:
     - python >=3.7
-    - typing >=3.7,<4.0
 
 test:
   requires:
